--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "index.html",
+  "engines": { "node" : "16.17.0" },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
