--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "node index.html"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.27.2",
